--- a/styles/home-love-animation.css
+++ b/styles/home-love-animation.css
@@ -21,6 +21,7 @@
   width: 100%;
   height: 100%;
   position: relative;
+  overflow: hidden;
 }
 
 .home-love-title .svg-container {
@@ -32,8 +33,12 @@
 }
 
 .home-love-title .mo-container {
+  position: absolute;
+  inset: 0;
   width: 100%;
   height: 100%;
+  overflow: hidden;
+  pointer-events: none;
 }
 
 .home-love-title .line {
